Broken CSS fix

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,4 +1,4 @@
-#game {
+canvas {
   position: absolute;
   width: 600px;
   height: 600px;
